css/styles.css
/* ... */
.cards-1 .card .fas {
	color: #ffffff;
	font-size: 4rem;
	line-height: 11rem;
}

.cards-1 .card-body {
	padding: 0;
}

.cards-1 .card-title {
	margin-bottom: 0.625rem;
}

.cards-1 .card p {
	margin-bottom: 0;
}


/******************/
/*     Agenda     */
/******************/
.basic-1 {
	padding-top: 7.75rem;
	padding-bottom: 8rem;
}

.basic-1 .h2-heading {
	margin-bottom: 0.75rem;
	text-align: center;
}

.basic-1 .p-heading {
	margin-bottom: 3.5rem;
	text-align: center;
}

.basic-1 .text-container.first {
	margin-bottom: 3rem;
}

.basic-1 .keynote-title {
	margin-bottom: 0.75rem;
}

.basic-1 .keynote-time {
	color: #0191FB;
	font-weight: 700;
	font-size: 1.125rem;
	line-height: 1.625rem;
}

.basic-1 .keynote-divider {
	height: 1px;
	margin-top: 2.25rem;
	margin-bottom: 2.25rem;
	border: none;
	background-color: #b5bcc4;
}




/********************/
/*     Speakers     */
/********************/
.cards-2 {
	padding-top: 7.75rem;
	padding-bottom: 3.25rem;
	text-align: center;
}

.cards-2 .h2-heading {
	margin-bottom: 0.75rem;
	text-align: center;
}

.cards-2 .p-heading {
	margin-bottom: 3.5rem;
	text-align: center;
}

.cards-2 .card {
	max-width: 340px;
	margin-right: auto;
	margin-bottom: -100px;
	margin-left: auto;
	border: none;
	background: transparent;
}

.cards-2 .card-image {
	position: relative;
	margin-bottom: 1.75rem;
}

.cards-2 .card-image img {
	border-radius: 6px;
	max-height: 8rem;
}

.cards-2 .card-image .hover-overlay {
	position: absolute;
	top: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100%;
	border-radius: 6px;
	background-color: #0191FB;
	opacity: 0;
	transition: all 0.2s ease;
}

.cards-2 .card-image:hover .hover-overlay {
	opacity: 1;
}

.cards-2 .card-image .hover-overlay p {
	width: 80%;
	margin-right: auto;
	margin-bottom: 0.375rem;
	margin-left: auto;
	color: #ffffff;
}

.cards-2 .card-image .hover-overlay p.read-more {
	font-weight: 700;
}

.cards-2 .card-body {
	padding: 0;
}

.cards-2 .card-title {
	margin-bottom: 0.25rem;
}

.cards-2 .fa-stack {
	width: 1.75rem;
	height: 1.75rem;
	margin-right: 0.125rem;
	margin-left: 0.125rem;
	line-height: 1.75rem;
}

.cards-2 .fa-stack .fa-stack-2x {
	font-size: 1.75rem;
}

.cards-2 .fa-stack .fa-stack-1x {
	font-size: 0.875rem;
}

.cards-2 .fa-stack-2x {
	color: #0191FB;
	transition: all 0.2s ease;
}

.cards-2 .fa-stack-1x {
	color: #ffffff;
}

.cards-2 .fa-stack:hover .fa-stack-2x {
	color: #ffffff;
}

.cards-2 .fa-stack:hover .fa-stack-1x {
	color: #0191FB;
}


/******************************/
/*     Speaker Lightboxes     */
/******************************/
.lightbox-basic {
	position: relative;
	max-width: 1200px;
	margin: 2.5rem auto;
	padding: 3rem 1.5rem 1rem 1.5rem;
	border-radius: 4px;
	background: #ffffff;
}

.lightbox-basic .container {
	padding-right: 0;
	padding-left: 0;
}

.lightbox-basic .image-container {
	max-width: 540px;
	margin-right: auto;
	margin-bottom: 2rem;
	margin-left: auto;
}

.lightbox-basic .image-container img {
	max-width: 20rem;
}

.lightbox-basic h2 {
	margin-bottom: 0.75rem;
}

.lightbox-basic hr {
	width: 60px;
	height: 2px;
	margin-top: 0;
	margin-bottom: 0.75rem;
	margin-left: 0;
	border: none;
	background-color: #0191FB;
	text-align: left;
}

.lightbox-basic .occupation {
	margin-bottom: 1.25rem;
	font-size: 1.25rem;
	line-height: 1.875rem;
}

.lightbox-basic .testimonial-text {
	margin-bottom: 1.625rem;
	font-size: 1.25rem;
	line-height: 1.875rem;
}

.lightbox-basic .fa-stack {
	width: 2em;
	margin-bottom: 1.25rem;
	margin-right: 0.25rem;
	font-size: 1.375rem;
}

.lightbox-basic .fa-stack .fa-stack-2x {
	color: #0191FB;
	transition: all 0.2s ease;
}

.lightbox-basic .fa-stack .fa-stack-1x {
	color: #ffffff;
	transition: all 0.2s ease;
}

.lightbox-basic .fa-stack:hover .fa-stack-2x {
	color: #ffffff;
}

.lightbox-basic .fa-stack:hover .fa-stack-1x {
	color: #0191FB;
}

/* Close X Button */
.lightbox-basic button.mfp-close.x-button {
	position: absolute;
	top: -2px;
	right: -2px;
	width: 44px;
	height: 44px;
	color: #000000;
}

/* end of close x button */


/*********************/
/*     Merch     */
/*********************/
.basic-2 {
	padding-top: 7.75rem;
	padding-bottom: 6.375rem;
}

.basic-2 .h2-heading {
	margin-bottom: 3.125rem;
	text-align: center;
}

.basic-2 .list-unstyled .bullet {
	width: 2.125rem;
	height: 2.125rem;
	margin-top: 0.25rem;
	border-radius: 0.25rem;
	background: linear-gradient(to bottom right, #0191FB, #39a4f1);
	color: #ffffff;
	font-weight: 700;
	font-size: 1.25rem;
	line-height: 2.125rem;
	text-align: center;
}

.basic-2 .list-unstyled .media-body {
	margin-left: 1.125rem;
}

.basic-2 .list-unstyled .title {
	margin-bottom: 0.25rem;
	color: #333333;
	font-weight: 700;
	font-size: 1.125rem;
	line-height: 1.75rem;
}

* {
    margin: 0;
    padding: 0;
    outline: none;
  }
  
  body {
    font-family: 'Roboto', sans-serif;
   
  }
  

  
  .merch {
    border-radius: 25px;
    border: 2px solid #dfdfdf;
    box-shadow: 5px 5px 5px #dfdfdf;
    margin-top: 20px;
    margin-bottom: 20px;
  }
  
  .card-head {
    position: relative;
    height: 220px;
    background: #0191FB;
    /* Old browsers */
    background: -moz-linear-gradient(-45deg, #0191FB 8%, #08F5DA 83%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(-45deg, #0191FB 8%, #08F5DA 83%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(135deg, #0191FB 8%, #08F5DA 83%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#0191FB', endColorstr='#08F5DA', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
    border-radius: 25px 25px 0 0;
  }
  
  .card-logo {
    width: 55px;
    margin: 20px;
  }
  
  .product-img {
    position: relative;
    left: 0;
    height: 90%;
    width: 90%;
    margin-top: 14px;
    margin-left: 5px;
    border-radius: 25px 25px 0px 0px;
  }
/* ... */

